# groove-map

./: AGENTS.md  DESIGN.md  README.md  package.json
specs/: README.md  architecture.md  data-model.dbml  data-model.md  gap-analysis.md  matching.md  product.md  testing.md
specs/contexts/: analysis.md  ingestion.md  library.md  matching.md  set-builder.md  sets.md  settings-privacy.md  tagging.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  exports.rs  lib.rs  main.rs  matching.rs  metadata.rs  models.rs  scanner.rs  sets.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/migrations/: 001_initial.sql
src/components/: ui.tsx
src/features/analysis-queue/: AnalysisQueueView.tsx
src/features/set-builder/: SetBuilderView.tsx
src/features/sets/: SetsView.tsx
src/features/settings/: SettingsView.tsx
src/features/tags/: TagsView.tsx
src/features/track-detail/: TrackDetailPanel.tsx
src/lib/: format.ts  tauri.ts
src/state/: app-state.ts
src/types/: domain.ts
