[package]
name = "groove-map"
version = "0.1.0"
description = "Offline-first desktop app for techno DJs"
authors = ["GrooveMap contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "groove_map_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["serde"] }
walkdir = "2.5.0"
sha2 = "0.10"
hex = "0.4.3"
thiserror = "2.0.18"
anyhow = "1.0.102"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
symphonia = { version = "0.6.0", features = ["mp3", "wav", "flac", "aac", "ogg", "isomp4", "aiff"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
